[feat_master][taiga-all] docs add docs